Alterando o preço no HTML

--- a/pricing-panel/index.html
+++ b/pricing-panel/index.html
@@ -42,7 +42,7 @@
                     <li class="pricing-features-item">Relationship development
                     </li>
                 </ul>
-                <span class="pricing-price">R$ 110</span>
+                <span class="pricing-price">$ 110</span>
                 <a href="#/" class="pricing-button">Free trial</a>
             </div>
             
